<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_A100"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.tinysip.sipdemo.BasicSipAppActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="80dp"
            android:padding="8dp"
            android:text="Registrar" />

        <Button
            android:id="@+id/bt_unregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="80dp"
            android:padding="8dp"
            android:text="Desregistrar" />

        <Button
            android:id="@+id/bt_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="80dp"
            android:padding="8dp"
            android:text="Invite" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/purple_900" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="6001"
        android:textColor="@color/purple_900" />

    <TextView
        android:id="@+id/tv_user_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_address"
        android:textColor="@color/purple_900" />

    <EditText
        android:id="@+id/et_user_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="192.168.132.80"
        android:textColor="@color/purple_900" />

    <TextView
        android:id="@+id/tv_contact_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_username"
        android:textColor="@color/purple_900" />

    <EditText
        android:id="@+id/et_contact_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="6002"
        android:textColor="@color/purple_900" />

    <TextView
        android:id="@+id/tv_contact_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_address"
        android:textColor="@color/purple_900" />

    <EditText
        android:id="@+id/et_contact_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="192.168.132.80"
        android:textColor="@color/purple_900" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:textColor="@color/purple_900"
        android:textSize="14sp" />

    <ScrollView
        android:id="@+id/sv_sip_events"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_900"
            android:textSize="14sp" />
    </ScrollView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat"
        android:textColor="@color/purple_900"
        android:textSize="14sp" />

    <ScrollView
        android:id="@+id/sv_sip_chat"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_chat"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:textColor="@color/purple_900"
            android:textSize="14sp" />
    </ScrollView>


</LinearLayout>
